# glam

./: .gitignore  CLAUDE.md  README.md  glam-cli  pyproject.toml
conf/: config.example.yaml  glossary.example.txt
docs/: architecture.md
docs/steps/: accent.md  init.md  mux.md  subtitles.md  transcribe.md  translate.md  tts.md
src/glam/: cli.py  clients.py  config.py  errors.py  glossary.py  media.py  paths.py  resegment.py  transcript_cleanup.py  transcript_merge.py
src/glam/backend/: params.py
src/glam/backend/transcribe/: base.py  openai.py
src/glam/backend/translate/: base.py  openai.py
src/glam/backend/tts/: base.py  chatterbox.py  openai.py
src/glam/common/: config.py  errors.py  hooks.py  job.py  translation.py
src/glam/steps/: accent.py  init.py  mux.py  subtitles.py  transcribe.py  translate.py  tts.py
tests/: test_accent.py  test_config.py  test_hooks.py  test_init.py  test_mux.py  test_resegment.py  test_subtitles.py  test_transcribe.py  test_transcript_cleanup.py  test_transcript_merge.py  test_translate.py  test_tts.py
