[project]
name = "glam"
version = "0.1.0"
description = "Glossary-Locked Audio Muxer — video translation pipeline"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "ffmpeg-python>=0.2",
    "openai>=1.30",
    "pyyaml>=6.0",
    "pysubs2>=1.7",
]

[project.scripts]
glam = "glam.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
