[project]
name = "glam"
version = "0.1.0"
description = "Glossary-Locked Audio Muxer — video translation pipeline"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "openai>=1.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pysubs2>=1.7",
    "dacite>=1.8",
    "ruaccent-predictor>=1.2.0",
]

[project.scripts]
glam = "glam.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
# Two import groups only: external (stdlib + third-party) and local project code.
section-order = ["future", "third-party", "first-party", "local-folder"]
default-section = "third-party"
known-first-party = ["glam"]

[tool.mypy]
files = ["src/glam", "tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
